<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_add_meeting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextMeetingSubject"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/th_me_de_la_r_union"
                android:inputType="textMultiLine"
                android:maxLength="60"
                android:maxLines="2"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.042"
                android:autofillHints="Thème" />

            <EditText
                android:id="@+id/editTextMeetingMaster"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/organisateur"
                android:inputType="text"
                android:maxLength="28"
                android:maxLines="1"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextMeetingSubject"
                app:layout_constraintVertical_bias="0.042"
                android:autofillHints="Organisateur" />


            <TextView
                android:id="@+id/buttonDatePicker"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:drawableStart="@drawable/ic_calendar_24dp"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.371"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextMeetingMaster"
                app:layout_constraintVertical_bias="0.085" />

            <TextView
                android:id="@+id/buttonTimePicker"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/heure"
                android:drawableStart="@drawable/ic_time_24db"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonDatePicker"
                app:layout_constraintTop_toBottomOf="@+id/editTextMeetingMaster"
                app:layout_constraintVertical_bias="0.085" />

            <TextView
                android:id="@+id/textViewNumberRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salle_n"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonDatePicker"
                app:layout_constraintVertical_bias="0.09" />

            <Spinner
                android:id="@+id/spinnerRooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewNumberRoom"
                app:layout_constraintTop_toBottomOf="@+id/buttonDatePicker"
                app:layout_constraintVertical_bias="0.091" />


            <AutoCompleteTextView
                android:id="@+id/complete"
                android:completionThreshold="1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_participant_fr"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNumberRoom"
                app:layout_constraintVertical_bias="0.056" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/complete" />

            <ImageButton
                android:id="@+id/imageButtonValidate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/ic_check_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup"
                android:contentDescription="@string/validate" />

            <ImageButton
                android:id="@+id/imageButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/ic_cancel_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup"
                android:contentDescription="@string/cancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>