<resources>
    <string name="app_name">Mareu</string>
    <string name="th_me_de_la_r_union">Thème de la réunion</string>
    <string name="organisateur">Organisateur</string>
    <string name="date">Date</string>
    <string name="heure">Heure</string>
    <string name="salle_n">Salle n°</string>
    <string name="email_participant_fr">email@participant.fr</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="afficher_les_r_unions_de_la_salle">Afficher les réunions de la salle :</string>
    <string name="annuler">ANNULER</string>
    <string name="ok">OK</string>
    <string name="add_meeting">Add meeting</string>
    <string name="delete_meeting">Delete meeting</string>
    <string name="Veuillez_saisir_une_adresse_mail_valide">Veuillez saisir une adresse mail valide.</string>
    <string name="Veuillez_saisir_un_sujet">Veuillez saisir un sujet.</string>
    <string name="Veuillez_saisir_votre_nom_dans_le_champ_organisateur">Veuillez saisir votre nom dans le champ organisateur.</string>
    <string name="Veuillez_choisir_une_date_valide">Veuillez choisir une date valide.</string>
    <string name="Veuillez_choisir_une_heure_valide">Veuillez choisir une heure valide.</string>
    <string name="Veuillez_renseigner_le_s_participant_s">Veuillez renseigner le(s) participant(s).</string>
    <string name="Salle">Salle </string>
    <string name="le">le </string>
    <string name="à">à</string>
    <string name="La_salle_sélectionnée_n_est_pas_diponible_à_cette_heure_ci">La salle sélectionnée n\'est pas diponible à cette heure-ci.</string>
    <string name="Une_salle_réservé_est_bloquée_45_min_avant_et_après_le_début_de_la_réunion">Une salle réservé est bloquée 45 min avant et après le début de la réunion.</string>
</resources>