<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="horizontal"
    android:id="@+id/listCell">
    <LinearLayout
        android:id="@+id/listCellLeftSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/subject"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Subject" />
        <TextView
            android:id="@+id/location"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="location" />

        <TextView
            android:id="@+id/participants"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="Participants" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/ic_delete_24dp"
        android:contentDescription="@string/delete_meeting" />
</LinearLayout>