<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/dateFilter"
        android:icon="@drawable/ic_calendar_24dp"
        app:showAsAction="always" />

    <item android:id="@+id/locationFilter"
        android:icon="@drawable/ic_location_24"
        app:showAsAction="always" />
</menu>